# Linux-Windows-Cmake-sqlite

./: CMakeLists.txt
centos7-vm/: Readme.md  Vagrantfile
centos7-vm/ansible/: build_sqlite.yml  install_docker.yml
centos7-vm/sqlite-build/: Dockerfile
